Set default image height to auto to prevent distortion when constricted by max-width.

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -43,6 +43,7 @@ body {
 
 img {
     max-width: 100%;
+    height: auto;
 }
 
 #content,
