--- a/style.css
+++ b/style.css
@@ -458,6 +458,7 @@ textarea {
 
   img {
     max-width: 100%;
+    height: auto;
   }
 
   #content,
